--- a/styles/style.css
+++ b/styles/style.css
@@ -24,7 +24,14 @@ header {
     background: var(--pink-bg);
     width: 100%;
 }
-
+/* button transition */
+button{
+    transition: .3s ease-in-out;
+}
+button:hover{
+    transform: scale(1.1);
+    box-shadow: 5px 5px 7px rgb(190, 190, 190);
+}
 /* navbar styles */
 
 
@@ -53,6 +60,14 @@ nav ul {
     gap: 2em;
     font-weight: 500;
     font-size: 18px;
+}
+nav ul a {
+    transition: .3s ease-in-out;
+}
+nav ul a:hover{
+transform: scale(1.3);
+text-shadow: 3px 3px 5px rgb(221, 221, 221);
+color: var(--primary-color);
 }
 
 /* Banner styles */
